2002-01-05  Marian Eichholz <eichholz@computer.org>
	* fighting with autotools