@@ -4,7 +4,7 @@
 # Created: 1993-05-16
 # Public domain
 
-# $Id: mkinstalldirs,v 1.1 2002/01/05 22:14:56 eichholz Exp $
+# $Id: mkinstalldirs,v 1.2 2002/01/07 00:30:22 eichholz Exp $
 
 errstatus=0
 
