@@ -1,5 +1,5 @@
-bin_PROGRAMS=g4tool
-# tiff2bacon
+bin_PROGRAMS=g4tool tiff2bacon
 g4tool_SOURCES=main.c encode.c decode.c pcl.c tiff.c tables.c 
-# tiff2bacon_SOURCES=tiff2bacon.c
+tiff2bacon_SOURCES=tiff2bacon.c
+tiff2bacon_LDADD=@TIFF_LIB@
 AM_CFLAGS=
