@@ -1,2 +1,6 @@
+2002-01-06  Marian Eichholz <eichholz@computer.org>
+	* config.h, configure.in make checks for libtiff.
+	* linking with libtiff.
+
 2002-01-05  Marian Eichholz <eichholz@computer.org>
 	* fighting with autotools
